[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/entity/ItemBase.gd" type="Script" id=1]

[node name="ItemBase" type="KinematicBody2D" groups=["Item_Pickup"]]
pause_mode = 1
collision_layer = 32
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
